--- a/Nov15/client/package.json
+++ b/Nov15/client/package.json
@@ -6,13 +6,31 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -p .",
-    "start": "npm run build && node dist"
+    "start": "npm run build && node dist",
+    "dev": "webpack-dev-server --content-base ./dist --port 4000 --devtool cheap-module-eval-source-map --mode development"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@licnz/http": "^1.2.5",
-    "@licnz/rest": "^1.2.5"
+    "@licnz/http": "^1.2.8",
+    "@licnz/rest": "^1.2.8",
+    "@types/react": "^16.4.18",
+    "@types/react-dom": "^16.0.9",
+    "css-loader": "^1.0.0",
+    "html-webpack-plugin": "^3.2.0",
+    "mobx": "^3.4.1",
+    "mobx-react": "^4.3.5",
+    "mobx-react-devtools": "^6.0.3",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
+    "style-loader": "^0.23.1",
+    "ts-loader": "^5.2.2",
+    "ts-node": "^7.0.1",
+    "typescript": "^3.1.3",
+    "webpack": "^4.23.1",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10",
+    "whatwg-fetch": "^3.0.0"
   }
 }
