--- a/Nov15/client/tsconfig.json
+++ b/Nov15/client/tsconfig.json
@@ -1,9 +1,11 @@
 {
   "compilerOptions": {
     "outDir": "dist",
+    "jsx": "react",
     "target": "es6",
-    "module": "commonjs",
+    //"module": "commonjs",
     "moduleResolution": "node",
+    "experimentalDecorators": true,
     // "lib": ["es2015"],
     "sourceMap": true
   },
