--- a/TGIF/package.json
+++ b/TGIF/package.json
@@ -21,6 +21,7 @@
     "@licnz/core": "^1.2.5",
     "@licnz/rest": "^1.2.5",
     "@licnz/uri": "^1.2.5",
+    "cors": "^2.8.5",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "opentracing": "^0.14.3",
